; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8192u/extr_r8192U_core.c_rtl8192_usb_disconnect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8192u/extr_r8192U_core.c_rtl8192_usb_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.net_device = type { i32 }
%struct.r8192_priv = type { i32* }

@COMP_DOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"=============>wlan driver to be removed\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"wlan driver removed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_interface*)* @rtl8192_usb_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl8192_usb_disconnect(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.r8192_priv*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %5 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %6 = call %struct.net_device* @usb_get_intfdata(%struct.usb_interface* %5)
  store %struct.net_device* %6, %struct.net_device** %3, align 8
  %7 = load %struct.net_device*, %struct.net_device** %3, align 8
  %8 = call %struct.r8192_priv* @ieee80211_priv(%struct.net_device* %7)
  store %struct.r8192_priv* %8, %struct.r8192_priv** %4, align 8
  %9 = load %struct.net_device*, %struct.net_device** %3, align 8
  %10 = call i32 @unregister_netdev(%struct.net_device* %9)
  %11 = load i32, i32* @COMP_DOWN, align 4
  %12 = call i32 @RT_TRACE(i32 %11, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.net_device*, %struct.net_device** %3, align 8
  %14 = call i32 @rtl8192_proc_remove_one(%struct.net_device* %13)
  %15 = load %struct.net_device*, %struct.net_device** %3, align 8
  %16 = call i32 @rtl8192_down(%struct.net_device* %15)
  %17 = load %struct.r8192_priv*, %struct.r8192_priv** %4, align 8
  %18 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @kfree(i32* %19)
  %21 = load %struct.r8192_priv*, %struct.r8192_priv** %4, align 8
  %22 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  %23 = load %struct.net_device*, %struct.net_device** %3, align 8
  %24 = call i32 @rtl8192_usb_deleteendpoints(%struct.net_device* %23)
  %25 = call i32 @usleep_range(i32 10000, i32 11000)
  %26 = load %struct.net_device*, %struct.net_device** %3, align 8
  %27 = call i32 @free_ieee80211(%struct.net_device* %26)
  %28 = load i32, i32* @COMP_DOWN, align 4
  %29 = call i32 @RT_TRACE(i32 %28, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local %struct.net_device* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local %struct.r8192_priv* @ieee80211_priv(%struct.net_device*) #1

declare dso_local i32 @unregister_netdev(%struct.net_device*) #1

declare dso_local i32 @RT_TRACE(i32, i8*) #1

declare dso_local i32 @rtl8192_proc_remove_one(%struct.net_device*) #1

declare dso_local i32 @rtl8192_down(%struct.net_device*) #1

declare dso_local i32 @kfree(i32*) #1

declare dso_local i32 @rtl8192_usb_deleteendpoints(%struct.net_device*) #1

declare dso_local i32 @usleep_range(i32, i32) #1

declare dso_local i32 @free_ieee80211(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
